5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1816_2574.log
== TEST (2019-06-10 18:08:10) 
-- CODE:
senha = input()

tam = senha.len()
print(tam)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tam = senha.len()
AttributeError: 'str' object has no attribute 'len'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:11:37) 
-- CODE:
senha = input()


print(len(senha))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:12:51) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 )

else
	print("INVALIDA")
print()
-- ERROR:
File "XXXX", line 3
    if(tamanho <= 8 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:12:59) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):

else
	print("INVALIDA")
print()
-- ERROR:
File "XXXX", line 5
    else
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:08) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):

	else
	print("INVALIDA")

-- ERROR:
File "XXXX", line 5
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:14) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):

	else:
		print("INVALIDA")

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:22) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):

	else
		print("INVALIDA")

-- ERROR:
File "XXXX", line 5
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:39) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):
    print("valida")
	else
		print("INVALIDA")

-- ERROR:
File "XXXX", line 5
    else
       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:47) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):
     print("valida")
	else
		print("INVALIDA")

-- ERROR:
File "XXXX", line 5
    else
       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:52) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):
     print("valida")
else
		print("INVALIDA")

-- ERROR:
File "XXXX", line 5
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:13:56) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho <= 8 ):
     print("valida")
else:
		print("INVALIDA")

-- OUTPUT:
valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:14:14) 
-- CODE:
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
     print("valida")
else:
		print("INVALIDA")

-- OUTPUT:
valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:20:43) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
			ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:20:54) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		 if(senha[i].islower()):
			mi = mi + 1
		 else:
			ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:21:06) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
			ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:21:17) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
			ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:21:55) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		if(senha[i].islower()):
			 mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:22:17) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		if(senha[i].islower()):
      	mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:22:23) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
		if(senha[i].islower()):
      	mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:24:01) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
			if(senha[i].islower()):
      	mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:24:05) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
			if(senha[i].islower()):
      		mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:24:12) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
   for i in tamanho:
	if(senha[i].islower()):
      		mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 8
    if(senha[i].islower()):
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:24:54) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
	for i in tamanho:
		if(senha[i].islower()):
      		mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
File "XXXX", line 9
    mi = mi + 1
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:25:02) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
	for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
		   ma = ma + 1
			
else:
		print("SENHA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in tamanho:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:25:26) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
	for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
		   ma = ma + 1
	print(mi,ma)		
else:
		print("SENHA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in tamanho:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:26:06) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
	for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
		   ma = ma + 1
	print(mi,ma)		
else:
		print("SENHA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in tamanho:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:26:17) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = len(senha)
if(tamanho >= 8 ):
	for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
		   ma = ma + 1
	print(mi,ma)		
else:
		print("SENHA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in tamanho:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:27:01) 
-- CODE:
i=0
mi=0
ma=0
senha = input()
tamanho = int(len(senha))
if(tamanho >= 8 ):
	for i in tamanho:
		if(senha[i].islower()):
			mi = mi + 1
		else:
		   ma = ma + 1
	print(mi,ma)		
else:
		print("SENHA INVALIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in tamanho:
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
